--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch src --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "build": "tsc",
-    "prod": "node dist/index.js"
-  },
+  "dev": "nodemon --watch src --exec ts-node -r tsconfig-paths/register src/index.ts",
+  "build": "tsc",
+  "start": "node dist/index.js"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
