--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,27 +4,21 @@
     "paths": {
       "~/*": ["*"]
     },
-    "strict": true, // Bật chế độ strict
-    "noImplicitAny": false, // Tắt kiểm tra implicit any
-    "skipLibCheck": true, // Bỏ qua kiểm tra thư viện
-   
+    "strict": true,
+    "noImplicitAny": false,
+    "skipLibCheck": true,
+
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["./node_modules/@types", "./types"],
+
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-
-  
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*", "types/**/*"],
-  "ts-node": {
-      "files": true
-    },
+  "include": ["src", "types"],
   "exclude": ["node_modules", "dist"]
-    
-  
 }
