--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,21 +4,27 @@
     "paths": {
       "~/*": ["*"]
     },
-    "strict": true,
-    "noImplicitAny": false,
-    "skipLibCheck": true,
-
+    "strict": true, // Bật chế độ strict
+    "noImplicitAny": false, // Tắt kiểm tra implicit any
+    "skipLibCheck": true, // Bỏ qua kiểm tra thư viện
+   
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["./node_modules/@types", "./types"],
-
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
     "moduleResolution": "node",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+
+  
   },
-  "include": ["src", "types"],
+  "include": ["src/**/*", "types/**/*"],
+  "ts-node": {
+      "files": true
+    },
   "exclude": ["node_modules", "dist"]
+    
+  
 }
