--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch src --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "build": "tsc",
-    "prod": "node dist/index.js"
+   "dev": "nodemon --watch src --exec ts-node -r tsconfig-paths/register src/index.ts",
+    "build": "rimraf dist && tsc",
+    "start": "node dist/index.js",
+    "prod": "npm run build && npm start",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src/**/*.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
