--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "typeRoots": ["./node_modules/@types", "./types"],
     "target": "ES2020",
     "module": "commonjs",
-    "outDir": "dist",
-    "rootDir": "src",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "moduleResolution": "node",
     "resolveJsonModule": true,
 
